# dwm

./: .gitignore  .gitmodules  README.md  generate_sbatch_from_yaml.py  index.md  requirements.txt  robots.txt  sitemap.xml
_layouts/: project_page.html
accelerate_configs/: deepspeed_2.yaml  deepspeed_4.yaml
data_processing/: README.md  create_dataset_file.py  dataset_layout_utils.py  encode_with_cogvideox.py  encode_with_cogvideox.sh  encode_with_wan.py  encode_with_wan.sh  encode_with_wan_impl.py  generate_prompt_embeds.py  make_sequences.py  run_sequence_generation.py  run_sequence_generation.sh  visualize_sequence.py  xsens2smplx.py
data_processing/EgoLife/EgoGPT/: README.md  check_videos_to_process.py  gradio_demo.py  inference.py  inference_dataset_directory.py  pyproject.toml  run_checklist.sh  run_inference_dataset.sh  run_inference_dataset_separate_gpus.sh  run_split_checklist.sh  split_checklist.py
data_processing/EgoLife/EgoGPT/egogpt/: utils.py
data_processing/EgoLife/EgoGPT/egogpt/model/: builder.py  egogpt_arch.py
data_processing/EgoLife/EgoGPT/egogpt/model/multimodal_encoder/: clip_encoder.py  siglip_encoder.py
data_processing/EgoLife/EgoGPT/egogpt/model/speech_encoder/: speech_encoder.py
data_processing/EgoLife/EgoGPT/egogpt/train/: train_audio.py
data_processing/EgoLife/EgoGPT/scripts/: train_egogpt.sh
dataset_files/: README.md  taste_rob_test.txt  taste_rob_train.txt  trumans_test.txt  trumans_train.txt
finetrainers/: args.py
scripts/: infer_lora.sbatch  infer_sft_i2v.sbatch  run_egoallo.sbatch  submit_snapshot.sh  train.sbatch  (+1 more)
(+246 files in other folders)
